--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,14 @@
             "value" : "*"
           },
           {
+            "key" : "Access-Control-Allow-Methods",
+            "value" : "GET"
+          },
+          {
+            "key" : "Access-Control-Allow-Headers",
+            "value" : "Content-Type, Authorization"
+          },
+          {
             "key" : "test",
             "value" : "v"
           }
