--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
           },
           {
             "key" : "Access-Control-Allow-Methods",
-            "value" : "GET"
+            "value" : "GET, POST, OPTIONS"
           },
           {
             "key" : "Access-Control-Allow-Headers",
