--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "headers": [
       {
-        "source": "*",
+        "source": "/index.html",
         "headers" : [
           {
             "key" : "Access-Control-Allow-Origin",
