--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
         "headers" : [
           {
             "key" : "Access-Control-Allow-Origin",
-            "value" : "*"
+            "value" : "https://audiobookbay.fi/"
           },
           {
             "key" : "Access-Control-Allow-Methods",
