--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,13 @@
 {
     "headers": [
-      {
-        "source": "/(.*)",
-        "headers" : [
-          {
-            "key" : "Access-Control-Allow-Origin",
-            "value" : "https://audiobookbay.fi/"
-          },
-          {
-            "key" : "Access-Control-Allow-Methods",
-            "value" : "GET, POST, OPTIONS"
-          },
-          {
-            "key" : "Access-Control-Allow-Headers",
-            "value" : "Content-Type, Authorization"
-          },
-          {
-            "key" : "test",
-            "value" : "v"
-          }
-        ]
-      }
-    ]
+        {
+          "source": "/api/(.*)",
+          "headers": [
+            { "key": "Access-Control-Allow-Credentials", "value": "true" },
+            { "key": "Access-Control-Allow-Origin", "value": "*" },
+            { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+            { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+          ]
+        }
+      ]
   }
