--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
           },
           {
             "key" : "Access-Control-Allow-Headers",
-            "value" : "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+            "value" : "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, X-UserSession"
           },
           {
             "key" : "Access-Control-Allow-Credentials",
